--- a/pom.xml
+++ b/pom.xml
@@ -364,7 +364,7 @@
         <spring-webflow.version>2.5.0.RELEASE</spring-webflow.version>
         <!--spring-security.version>5.0.2.BUILD-20180214.212521-49</spring-security.version-->
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
-        <spring-hateoas.version>1.0.1.RELEASE</spring-hateoas.version>
+        <!--spring-hateoas.version>1.0.1.RELEASE</spring-hateoas.version-->
         <!--spring-data-releasetrain.version>Moore-BUILD-SNAPSHOT</spring-data-releasetrain.version-->
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social.version>2.0.0.NEMESIS-RELEASE</spring-social.version>
