--- a/pom.xml
+++ b/pom.xml
@@ -2009,6 +2009,11 @@
             </dependency>
             <dependency>
                 <groupId>io.nemesis.platform.module.payment</groupId>
+                <artifactId>nemesis-module-bitcoin</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.payment</groupId>
                 <artifactId>nemesis-module-paypal</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
