Use the dalet vfs-gcs and import the spring-cloud bom

--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,7 @@
         <googleauth.version>1.5.0</googleauth.version>
         <google-api-services-compute.version>v1-rev20200901-1.30.10</google-api-services-compute.version>
         <google-concurrentlinkedhashmap.version>1.4.2</google-concurrentlinkedhashmap.version>
-        <google-cloud-storage.version>1.0.8</google-cloud-storage.version>
+        <google-cloud-storage.version>DEV</google-cloud-storage.version>
         <google.geocoder.version>0.16</google.geocoder.version>
         <google-maps-services.version>0.9.4</google-maps-services.version>
         <gsap-js.version>1.13.1</gsap-js.version>
@@ -614,7 +614,7 @@
                 <version>${commons-vfs2-azure.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.celarli.commons</groupId>
+                <groupId>com.dalet.celarli.commons</groupId>
                 <artifactId>vfs-gcs</artifactId>
                 <version>${google-cloud-storage.version}</version>
             </dependency>
@@ -644,13 +644,13 @@
                 <version>${google-concurrentlinkedhashmap.version}</version>
             </dependency>
             <!-- WARNING: BE VERY CAREFUL WHEN YOU ADD THE SPRING-CLOUD AS IT BRINGS IT'S OWN SPRING-DATA AND SPRING-BOOT-->
-            <!--dependency>
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency-->
+            </dependency>
             <dependency>
                 <groupId>org.springframework.mobile</groupId>
                 <artifactId>spring-mobile-starter</artifactId>
