--- a/pom.xml
+++ b/pom.xml
@@ -201,11 +201,9 @@
         <jackson-datatype-money.version>1.1.1</jackson-datatype-money.version>
         <jackson-datatype-jts.version>2.4</jackson-datatype-jts.version>
         <jackson-datatype.version>2.10.1</jackson-datatype.version>
-        <javauom.version>2.0-PRD</javauom.version>
-        <javauom-ri.version>2.0.2</javauom-ri.version>
-        <javauom-si.version>1.3.1</javauom-si.version>
-        <javauom-se.version>1.0.10</javauom-se.version>
-        <javauom-systems.version>1.3</javauom-systems.version>
+        <javauom.version>2.1.1</javauom.version>
+        <javauom-ri.version>2.0.4</javauom-ri.version>
+        <javauom-systems.version>2.0.2</javauom-systems.version>
         <javauom-jackson-module.version>1.3.5.NEMESIS-RELEASE</javauom-jackson-module.version>
         <javaparser.version>3.15.21</javaparser.version>
         <java-types.version>1.0.1</java-types.version>
@@ -1506,28 +1504,18 @@
             </dependency>
             <dependency>
                 <groupId>systems.uom</groupId>
-                <artifactId>systems-common-java8</artifactId>
+                <artifactId>systems-common</artifactId>
                 <version>${javauom-systems.version}</version>
             </dependency>
             <dependency>
                 <groupId>systems.uom</groupId>
-                <artifactId>systems-unicode-java8</artifactId>
+                <artifactId>systems-unicode</artifactId>
                 <version>${javauom-systems.version}</version>
             </dependency>
             <dependency>
                 <groupId>systems.uom</groupId>
                 <artifactId>systems-quantity</artifactId>
                 <version>${javauom-systems.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>si.uom</groupId>
-                <artifactId>si-units-java8</artifactId>
-                <version>${javauom-si.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>tec.uom</groupId>
-                <artifactId>uom-se</artifactId>
-                <version>${javauom-se.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.opower.unitsofmeasure</groupId>
