--- a/pom.xml
+++ b/pom.xml
@@ -202,14 +202,16 @@
         <jackson-datatype-jts.version>2.4</jackson-datatype-jts.version>
         <jackson-datatype.version>2.10.1</jackson-datatype.version>
         <javauom.version>2.1.1</javauom.version>
-        <javauom-ri.version>2.0.4</javauom-ri.version>
+        <javauom-ri.version>2.1.1</javauom-ri.version>
         <javauom-systems.version>2.0.2</javauom-systems.version>
-        <javauom-jackson-module.version>1.3.5.NEMESIS-RELEASE</javauom-jackson-module.version>
+        <javauom-jackson-module.version>2.0.1</javauom-jackson-module.version>
+        <javauom-domain.version>2.0.1-SNAPSHOT</javauom-domain.version>
         <javaparser.version>3.15.21</javaparser.version>
         <java-types.version>1.0.1</java-types.version>
         <javax-inject.version>1</javax-inject.version>
         <javax-jstl.version>1.2.2</javax-jstl.version>
         <javax-activation.version>1.2.0</javax-activation.version>
+        <javax-xml-soap.version>1.4.0</javax-xml-soap.version>
         <jsr250.version>1.0</jsr250.version>
         <javax-interceptor.version>1.2.2</javax-interceptor.version>
         <javax-jsp.version>2.3.3</javax-jsp.version>
@@ -1453,6 +1455,11 @@
                 <version>${bcpkix-jdk15on.version}</version>
             </dependency>
             <dependency>
+                <groupId>javax.xml.soap</groupId>
+                <artifactId>javax.xml.soap-api</artifactId>
+                <version>${javax-xml-soap.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.sun.mail</groupId>
                 <artifactId>javax.mail</artifactId>
                 <version>${sun-mail-impl.version}</version>
@@ -1518,9 +1525,14 @@
                 <version>${javauom-systems.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.opower.unitsofmeasure</groupId>
-                <artifactId>jackson-module-unitsofmeasure</artifactId>
+                <groupId>tech.uom.lib</groupId>
+                <artifactId>uom-lib-jackson</artifactId>
                 <version>${javauom-jackson-module.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>tech.uom.domain</groupId>
+                <artifactId>uom-retail-quantity</artifactId>
+                <version>${javauom-domain.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.bedatadriven</groupId>
@@ -1785,6 +1797,21 @@
             <dependency>
                 <groupId>io.nemesis.platform.module.tax</groupId>
                 <artifactId>nemesis-module-avalara</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.delivery</groupId>
+                <artifactId>nemesis-module-econt</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.delivery</groupId>
+                <artifactId>nemesis-module-speedy</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.delivery</groupId>
+                <artifactId>nemesis-module-delivery-api</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
