--- a/pom.xml
+++ b/pom.xml
@@ -311,7 +311,7 @@
         <money-validation.version>2.0.0</money-validation.version>
         <mongodb-embedded.version>5.0.5</mongodb-embedded.version>
         <nemesis.version>${project.version}</nemesis.version>
-        <nemesis-tools.version>2.2.0.RELEASE</nemesis-tools.version>
+        <nemesis-tools.version>2.2.1.BUILD-SNAPSHOT</nemesis-tools.version>
         <nemesis-rules.version>2.1.0.RELEASE</nemesis-rules.version>
         <opencmis.version>1.1.0</opencmis.version>
         <olingo-odata2.version>2.0.11</olingo-odata2.version>
