--- a/pom.xml
+++ b/pom.xml
@@ -1823,6 +1823,11 @@
             </dependency>
             <dependency>
                 <groupId>io.nemesis.platform.module.delivery</groupId>
+                <artifactId>nemesis-module-transpress</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.delivery</groupId>
                 <artifactId>nemesis-module-delivery-api</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
