--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 
     <properties>
         <activiti.version>7-201802-EA</activiti.version>
-        <amazon-aws-sdk.version>1.11.538</amazon-aws-sdk.version>
+        <amazon-aws-sdk.version>1.11.792</amazon-aws-sdk.version>
         <asciidoctor.version>1.6.0</asciidoctor.version>
         <asciidoctorj.version>2.2.0</asciidoctorj.version>
         <asciidoctorj-diagram.version>2.0.1</asciidoctorj-diagram.version>
@@ -2169,6 +2169,11 @@
             <dependency>
                 <groupId>io.nemesis.platform.module.widget</groupId>
                 <artifactId>nemesis-widget-link</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.widget</groupId>
+                <artifactId>nemesis-widget-featurette</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
