--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 
     <properties>
         <activiti.version>7-201802-EA</activiti.version>
-        <amazon-aws-sdk.version>1.11.925</amazon-aws-sdk.version>
+        <amazon-aws-sdk.version>1.11.934</amazon-aws-sdk.version>
         <asciidoctor.version>1.6.0</asciidoctor.version>
         <asciidoctorj.version>2.2.0</asciidoctorj.version>
         <asciidoctorj-diagram.version>2.0.1</asciidoctorj-diagram.version>
@@ -139,9 +139,9 @@
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
-        <commons-io.version>2.6</commons-io.version>
-        <commons-vfs2.version>2.1.1660580.2</commons-vfs2.version>
-        <commons-vfs2-s3.version>2.4.2</commons-vfs2-s3.version>
+        <commons-io.version>2.9.0</commons-io.version>
+        <commons-vfs2.version>2.9.0</commons-vfs2.version>
+        <commons-vfs2-s3.version>4.3.5-nemesis</commons-vfs2-s3.version>
         <commons-vfs2-azure.version>1.2.patched</commons-vfs2-azure.version>
         <commons-jcs.version>2.2.1</commons-jcs.version>
         <commons-text.version>1.8</commons-text.version>
@@ -516,6 +516,13 @@
                 <scope>import</scope>
             </dependency-->
             <dependency>
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-java-sdk-bom</artifactId>
+                <version>${amazon-aws-sdk.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>com.helger</groupId>
                 <artifactId>jcodemodel</artifactId>
                 <version>${codemodel.version}</version>
@@ -535,22 +542,6 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-web</artifactId>
                 <version>${log4j2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk-s3</artifactId>
-                <version>${amazon-aws-sdk.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>commons-logging</groupId>
-                        <artifactId>commons-logging</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk-cloudfront</artifactId>
-                <version>${amazon-aws-sdk.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.apis</groupId>
@@ -608,7 +599,7 @@
                 <version>${commons-vfs2.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github</groupId>
+                <groupId>com.github.abashev</groupId>
                 <artifactId>vfs-s3</artifactId>
                 <version>${commons-vfs2-s3.version}</version>
             </dependency>
