--- a/pom.xml
+++ b/pom.xml
@@ -252,6 +252,7 @@
         <jstree.version>3.3.3</jstree.version>
         <jstree-bootstrap-theme.version>1.0.1</jstree-bootstrap-theme.version>
         <license-maven-plugin>1.20</license-maven-plugin>
+        <log4j2.version>2.17.1</log4j2.version>
         <lutung.version>0.0.8</lutung.version>
         <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <kie.version>7.39.0.Final</kie.version>
