--- a/pom.xml
+++ b/pom.xml
@@ -1628,8 +1628,8 @@
                 <version>${elasticsearch-emebedded.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.elasticsearch.plugin</groupId>
-                <artifactId>reindex-client</artifactId>
+                <groupId>org.codelibs.elasticsearch.module</groupId>
+                <artifactId>reindex</artifactId>
                 <version>${elasticsearch.version}</version>
             </dependency>
             <dependency>
